--- a/java/spring-boot-apps/hello-world-modular/hello-world-ui/src/main/resources/application.properties
+++ b/java/spring-boot-apps/hello-world-modular/hello-world-ui/src/main/resources/application.properties
@@ -2,5 +2,12 @@ APPLICATION_NAME=hello-world-modular-ui
 SERVER_PORT=8283
 
 
-spring.application.name=${ENV_APPLICATION_NAME:${APPLICATION_NAME}}
-server.port=${ENV_SERVER_PORT:${SERVER_PORT}}
+GREETING_SERVICE_PROTOCOL=http
+GREETING_SERVICE_DOMAIN=localhost
+GREETING_SERVICE_PORT=8284
+GREETING_SERVICE_PATH=/greeting
+GREETING_SERVICE_CLIENT_NAME=${APPLICATION_NAME}
+GREETING_SERVICE_TYPE=internal
+
+spring.application.name=${ENV_UI_APPLICATION_NAME:${APPLICATION_NAME}}
+server.port=${ENV_UI_SERVER_PORT:${SERVER_PORT}}
