--- a/java/spring-boot-apps/hello-world-modular/hello-world-ui/pom.xml
+++ b/java/spring-boot-apps/hello-world-modular/hello-world-ui/pom.xml
@@ -10,8 +10,17 @@
   <description>A simple barbones ui</description> 
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-webflux</artifactId>
-		</dependency>
-	</dependencies>  
+			<groupId>com.zonesoft</groupId>
+			<artifactId>hello-world-utils</artifactId>
+			<version>0.0.1-SNAPSHOT</version>			
+		</dependency>		
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>		
+		</plugins>
+	</build> 	
 </project>
