--- a/java/spring-boot-apps/hello-world-modular/pom.xml
+++ b/java/spring-boot-apps/hello-world-modular/pom.xml
@@ -16,7 +16,7 @@
   <description>Parent module of the hello world modular suite of applications and services</description>	
 	<modules>
 		<module>hello-world-ui</module>
-<!--		<module>hello-world-utils</module>-->
+		<module>hello-world-utils</module>
 		<module>hello-world-services</module>
 	</modules>
 	<properties>
@@ -40,17 +40,30 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.zonesoft</groupId>-->
+<!--			<artifactId>hello-world-utils</artifactId>-->
+<!--		</dependency>		-->
 	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>		
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build> 
+<!--	<dependencyManagement>-->
+<!--		<dependencies>-->
+<!--			<dependency>-->
+<!--				<groupId>com.zonesoft</groupId>-->
+<!--				<artifactId>hello-world-utils</artifactId>-->
+<!--				<version>${project.version}</version>-->
+<!--			</dependency>-->
+<!--		</dependencies>-->
+<!--	</dependencyManagement>		-->
+<!--	<build>-->
+<!--		<plugins>-->
+<!--			<plugin>-->
+<!--				<groupId>org.springframework.boot</groupId>-->
+<!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--			</plugin>		-->
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-surefire-plugin</artifactId>-->
+<!--			</plugin>-->
+<!--		</plugins>-->
+<!--	</build> -->
 </project>
