multi modules with multiple microservices created and used

--- a/java/spring-boot-apps/hello-world-modular/hello-world-services/clock-service/pom.xml
+++ b/java/spring-boot-apps/hello-world-modular/hello-world-services/clock-service/pom.xml
@@ -6,16 +6,9 @@
 		<artifactId>hello-world-services</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>greeting-service</artifactId>
+	<artifactId>clock-service</artifactId>
 	<name>greeting-service</name>
-	<description>A very basic greeting web service</description>
-	<dependencies>
-		<dependency>
-			<groupId>com.zonesoft</groupId>
-			<artifactId>hello-world-utils</artifactId>
-			<version>0.0.1-SNAPSHOT</version>			
-		</dependency>		
-	</dependencies>	
+	<description>A very basic web service to get the time</description>
 	<build>
 		<plugins>
 			<plugin>
