--- a/java/spring-boot-apps/03-observability/hello-world-modular/hello-world-ui/src/main/resources/application.properties
+++ b/java/spring-boot-apps/03-observability/hello-world-modular/hello-world-ui/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-APPLICATION_NAME=hello-world-modular-ui
+ORGANISATION=zonesoft
+APPLICATION=hello-world-modular-ui
 SERVER_PORT=8283
-
 
 GREETING_SERVICE_PROTOCOL=http
 GREETING_SERVICE_DOMAIN=localhost
@@ -9,5 +9,8 @@ GREETING_SERVICE_PATH=/greeting
 GREETING_SERVICE_CLIENT_NAME=${APPLICATION_NAME}
 GREETING_SERVICE_TYPE=internal
 
-spring.application.name=${ENV_UI_APPLICATION_NAME:${APPLICATION_NAME}}
+LOKI_URL=http\://localhost\:3100/loki/api/v1/push
+
+spring.application.org=${ENV_UI_ORGANISATION:${ORGANISATION}}
+spring.application.name=${ENV_UI_APPLICATION:${APPLICATION}}
 server.port=${ENV_UI_SERVER_PORT:${SERVER_PORT}}
