--- a/java/spring-boot-apps/03-observability/hello-world-modular/pom.xml
+++ b/java/spring-boot-apps/03-observability/hello-world-modular/pom.xml
@@ -22,13 +22,13 @@
 	<properties>
 		<java.version>21</java.version>
 		<frontend-maven-plugin.version>1.14.0</frontend-maven-plugin.version>
+        <loki-logback-appender.version>1.5.1</loki-logback-appender.version>		
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -44,32 +44,8 @@
 			<groupId>com.github.loki4j</groupId>
 			<artifactId>loki-logback-appender</artifactId>
 			<scope>runtime</scope>
-			<version>1.5.1</version>
+			<version>${loki-logback-appender.version}</version>
 		</dependency>		
-<!--		<dependency>-->
-<!--			<groupId>com.zonesoft</groupId>-->
-<!--			<artifactId>hello-world-utils</artifactId>-->
-<!--		</dependency>		-->
 	</dependencies>
-<!--	<dependencyManagement>-->
-<!--		<dependencies>-->
-<!--			<dependency>-->
-<!--				<groupId>com.zonesoft</groupId>-->
-<!--				<artifactId>hello-world-utils</artifactId>-->
-<!--				<version>${project.version}</version>-->
-<!--			</dependency>-->
-<!--		</dependencies>-->
-<!--	</dependencyManagement>		-->
-<!--	<build>-->
-<!--		<plugins>-->
-<!--			<plugin>-->
-<!--				<groupId>org.springframework.boot</groupId>-->
-<!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
-<!--			</plugin>		-->
-<!--			<plugin>-->
-<!--				<groupId>org.apache.maven.plugins</groupId>-->
-<!--				<artifactId>maven-surefire-plugin</artifactId>-->
-<!--			</plugin>-->
-<!--		</plugins>-->
-<!--	</build> -->
+
 </project>
