--- a/java/spring-boot-apps/03-observability/hello-world-modular/hello-world-ui/src/main/resources/application.properties
+++ b/java/spring-boot-apps/03-observability/hello-world-modular/hello-world-ui/src/main/resources/application.properties
@@ -6,7 +6,7 @@ GREETING_SERVICE_PROTOCOL=http
 GREETING_SERVICE_DOMAIN=localhost
 GREETING_SERVICE_PORT=8284
 GREETING_SERVICE_PATH=/greeting
-GREETING_SERVICE_CLIENT_NAME=${APPLICATION_NAME}
+GREETING_SERVICE_CLIENT_NAME=${APPLICATION}
 GREETING_SERVICE_TYPE=internal
 
 LOKI_URL=http\://localhost\:3100/loki/api/v1/push
