Integrated with loki. Fixed up ClientBuilder to log requests & responses

--- a/java/spring-boot-apps/03-observability/hello-world-modular/pom.xml
+++ b/java/spring-boot-apps/03-observability/hello-world-modular/pom.xml
@@ -39,7 +39,13 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
-		</dependency>	
+		</dependency>
+		<dependency>
+			<groupId>com.github.loki4j</groupId>
+			<artifactId>loki-logback-appender</artifactId>
+<!--			<scope>runtime</scope>-->
+			<version>${loki-logback-appender.version}</version>
+		</dependency>		
 	</dependencies>
 
 </project>
