tidy up. remove unused and commented out code

--- a/java/spring-boot-apps/03-log-to-loki/hello-world-modular/hello-world-services/clock-service/src/main/resources/application.properties
+++ b/java/spring-boot-apps/03-log-to-loki/hello-world-modular/hello-world-services/clock-service/src/main/resources/application.properties
@@ -6,4 +6,4 @@ LOKI_URL=http\://localhost\:3100/loki/api/v1/push
 
 spring.application.org=${ENV_CLOCK_SERVICE_ORGANISATION:${ORGANISATION}}
 spring.application.name=${ENV_CLOCK_SERVICE_NAME:${APPLICATION_NAME}}
-server.port=${ENV_CLOCK_SERVER_PORT:${SERVER_PORT}}
+server.port=${ENV_CLOCK_SERVICE_PORT:${SERVER_PORT}}
