--- a/java/spring-boot-apps/02-multi-module/hello-world-modular/hello-world-ui/pom.xml
+++ b/java/spring-boot-apps/02-multi-module/hello-world-modular/hello-world-ui/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   <artifactId>hello-world-ui</artifactId>
   <name>hello-world-ui</name>
-  <description>A simple barbones ui</description> 
+  <description>A ui to consume the services</description> 
 	<dependencies>
 		<dependency>
 			<groupId>com.zonesoft</groupId>
