updated logback logging setup of all modules

--- a/java/spring-boot-apps/02-multi-module/hello-world-modular/hello-world-services/greeting-service/src/main/resources/application.properties
+++ b/java/spring-boot-apps/02-multi-module/hello-world-modular/hello-world-services/greeting-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+ORGANISATION=zonesoft
 APPLICATION_NAME=greeting-service
 SERVER_PORT=8284
 
@@ -15,5 +16,6 @@ CLOCK_SERVICE_PATH=/get-time
 CLOCK_SERVICE_CLIENT_NAME=${APPLICATION_NAME}
 CLOCK_SERVICE_TYPE=internal
 
+spring.application.org=${ENV_GREETING_SERVICE_ORGANISATION:${ORGANISATION}}
 spring.application.name=${ENV_GREETING_SERVICE_NAME:${APPLICATION_NAME}}
 server.port=${ENV_GREETING_SERVER_PORT:${SERVER_PORT}}
