--- a/java/spring-boot-apps/02-multi-module/hello-world-modular/hello-world-ui/src/main/resources/application.properties
+++ b/java/spring-boot-apps/02-multi-module/hello-world-modular/hello-world-ui/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-APPLICATION_NAME=hello-world-modular-ui
+ORGANISATION=zonesoft
+APPLICATION_NAME=hello-world-ui
 SERVER_PORT=8283
 
 
@@ -9,5 +10,6 @@ GREETING_SERVICE_PATH=/greeting
 GREETING_SERVICE_CLIENT_NAME=${APPLICATION_NAME}
 GREETING_SERVICE_TYPE=internal
 
+spring.application.org=${ENV_UI_APPLICATION_ORGANISATION:${ORGANISATION}}
 spring.application.name=${ENV_UI_APPLICATION_NAME:${APPLICATION_NAME}}
 server.port=${ENV_UI_SERVER_PORT:${SERVER_PORT}}
