--- a/java/spring-boot-apps/02-multi-module/hello-world-modular/hello-world-services/calendar-service/src/main/resources/application.properties
+++ b/java/spring-boot-apps/02-multi-module/hello-world-modular/hello-world-services/calendar-service/src/main/resources/application.properties
@@ -1,5 +1,7 @@
+ORGANISATION=zonesoft
 APPLICATION_NAME=calendar-service
 SERVER_PORT=8286
 
+spring.application.org=${ENV_CALENDAR_SERVICE_ORGANISATION:${ORGANISATION}}
 spring.application.name=${ENV_CALENDAR_SERVICE_NAME:${APPLICATION_NAME}}
 server.port=${ENV_CALENDAR_SERVER_PORT:${SERVER_PORT}}
