added conditional logging based on flag in properties file

--- a/java/spring-boot-apps/04-profile-based-logging/hello-world-modular/hello-world-ui/src/main/resources/application.properties
+++ b/java/spring-boot-apps/04-profile-based-logging/hello-world-modular/hello-world-ui/src/main/resources/application.properties
@@ -10,6 +10,9 @@ GREETING_SERVICE_PATH=/greeting
 GREETING_SERVICE_CLIENT_NAME=${APPLICATION_NAME}
 GREETING_SERVICE_TYPE=internal
 
+LOKI_ENABLED=true
+LOKI_URL=http\://localhost\:3100/loki/api/v1/push
+
 spring.application.org=${ENV_UI_APPLICATION_ORGANISATION:${ORGANISATION}}
 spring.application.name=${ENV_UI_APPLICATION_NAME:${APPLICATION_NAME}}
 server.port=${ENV_UI_SERVER_PORT:${SERVER_PORT}}
