--- a/java/spring-boot-apps/04-profile-based-logging/hello-world-modular/pom.xml
+++ b/java/spring-boot-apps/04-profile-based-logging/hello-world-modular/pom.xml
@@ -39,7 +39,17 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.github.loki4j</groupId>
+			<artifactId>loki-logback-appender</artifactId>
+			<scope>runtime</scope>
+			<version>${loki-logback-appender.version}</version>
 		</dependency>		
+		<dependency>
+		    <groupId>org.codehaus.janino</groupId>
+		    <artifactId>janino</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
