--- a/java/spring-boot-apps/04-profile-based-logging/hello-world-modular/hello-world-services/clock-service/src/main/resources/application.properties
+++ b/java/spring-boot-apps/04-profile-based-logging/hello-world-modular/hello-world-services/clock-service/src/main/resources/application.properties
@@ -2,6 +2,9 @@ ORGANISATION=zonesoft
 APPLICATION_NAME=clock-service
 SERVER_PORT=8285
 
+LOKI_ENABLED=true
+LOKI_URL=http\://localhost\:3100/loki/api/v1/push
+
 spring.application.org=${ENV_CLOCK_SERVICE_ORGANISATION:${ORGANISATION}}
 spring.application.name=${ENV_CLOCK_SERVICE_NAME:${APPLICATION_NAME}}
 server.port=${ENV_CLOCK_SERVER_PORT:${SERVER_PORT}}
