--- a/java/spring-boot-apps/04-profile-based-logging/hello-world-modular/hello-world-services/greeting-service/src/main/resources/application.properties
+++ b/java/spring-boot-apps/04-profile-based-logging/hello-world-modular/hello-world-services/greeting-service/src/main/resources/application.properties
@@ -2,6 +2,9 @@ ORGANISATION=zonesoft
 APPLICATION_NAME=greeting-service
 SERVER_PORT=8284
 
+LOKI_ENABLED=true
+LOKI_URL=http\://localhost\:3100/loki/api/v1/push
+
 CALENDAR_SERVICE_PROTOCOL=http
 CALENDAR_SERVICE_DOMAIN=localhost
 CALENDAR_SERVICE_PORT=8286
