--- a/java/spring-boot-apps/04-profile-based-logging/hello-world-modular/hello-world-utils/src/main/resources/application.properties
+++ b/java/spring-boot-apps/04-profile-based-logging/hello-world-modular/hello-world-utils/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 ORGANISATION=zonesoft
 LIBRARY=hello-world-utils
 
+LOKI_ENABLED=false
+LOKI_URL=http\://localhost\:3100/loki/api/v1/push
+
 HTTP_CLIENT_LOGGING_LEVEL=DEBUG
 
 spring.application.org=${ENV_UTILS_ORGANISATION:${ORGANISATION}}
