--- a/docker/monitoring/02-prometheus-loki-grafana/docker-compose.yml
+++ b/docker/monitoring/02-prometheus-loki-grafana/docker-compose.yml
@@ -1,5 +1,18 @@
 
 services:
+
+  prometheus:
+    container_name: prometheus
+    image: prom/prometheus:v2.45.5
+    extra_hosts: ['host.docker.internal:host-gateway']
+    command:
+        - --enable-feature=exemplar-storage
+        - --config.file=/etc/prometheus/prometheus.yml
+    volumes:
+        - ./docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    ports:
+        - "9090:9090"
+
   loki:
     container_name: loki
     image: grafana/loki:3.0.0
