property based flagging to control loki logging fixed

--- a/java/spring-boot-apps/05-metrics-observability/hello-world-modular/hello-world-utils/src/main/resources/application.properties
+++ b/java/spring-boot-apps/05-metrics-observability/hello-world-modular/hello-world-utils/src/main/resources/application.properties
@@ -2,7 +2,7 @@ ORGANISATION=zonesoft
 LIBRARY=hello-world-utils
 
 LOKI_ENABLED=false
-LOKI_URL=http\://localhost\:3100/loki/api/v1/push
+LOKI_URL=http://localhost:3100/loki/api/v1/push
 
 HTTP_CLIENT_LOGGING_LEVEL=DEBUG
 
@@ -10,3 +10,6 @@ spring.application.org=${ENV_UTILS_ORGANISATION:${ORGANISATION}}
 spring.application.name=${ENV_UTILS_LIBRARY:${LIBRARY}}
 
 logging.level.reactor.netty.http.client=${ENV_HTTP_CLIENT_LOGGING_LEVEL:${HTTP_CLIENT_LOGGING_LEVEL}}
+
+zonesoft.loki.enabled=${ENV_UTILS_LOKI_ENABLED:${LOKI_ENABLED}}
+zonesoft.loki.url=${ENV_UTILS_LOKI_URL:${LOKI_URL}
