--- a/docker/monitoring/02-prometheus-loki-grafana/docker-compose.yml
+++ b/docker/monitoring/02-prometheus-loki-grafana/docker-compose.yml
@@ -9,9 +9,11 @@ services:
         - --enable-feature=exemplar-storage
         - --config.file=/etc/prometheus/prometheus.yml
     volumes:
-        - ./docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+        - ./prometheus/config.yml:/etc/prometheus/prometheus.yml:ro
     ports:
         - "9090:9090"
+    networks:
+      - back_tier
 
   loki:
     container_name: loki
