--- a/java/spring-boot-apps/05-metrics-observability/hello-world-modular/hello-world-services/greeting-service/src/main/resources/application.properties
+++ b/java/spring-boot-apps/05-metrics-observability/hello-world-modular/hello-world-services/greeting-service/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 ORGANISATION=zonesoft
 APPLICATION_NAME=greeting-service
 SERVER_PORT=8284
-
-LOKI_ENABLED=true
-LOKI_URL=http\://localhost\:3100/loki/api/v1/push
+LOKI_ENABLED=false
+LOKI_URL=http://localhost:3100/loki/api/v1/push
 
 CALENDAR_SERVICE_PROTOCOL=http
 CALENDAR_SERVICE_DOMAIN=localhost
@@ -22,3 +21,9 @@ CLOCK_SERVICE_TYPE=internal
 spring.application.org=${ENV_GREETING_SERVICE_ORGANISATION:${ORGANISATION}}
 spring.application.name=${ENV_GREETING_SERVICE_NAME:${APPLICATION_NAME}}
 server.port=${ENV_GREETING_SERVER_PORT:${SERVER_PORT}}
+
+zonesoft.loki.enabled=${ENV_GREETING_SERVICE_LOKI_ENABLED:${LOKI_ENABLED}}
+zonesoft.loki.url=${ENV_GREETING_SERVICE_LOKI_URL:${LOKI_URL}}
+
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.endpoints.web.exposure.include=info,health,metrics,prometheus
