clean up and remove all observability to create a clean baseline

--- a/java/spring-boot-apps/07-tracing-observability/hello-world-modular/hello-world-services/greeting-service/src/main/resources/application.properties
+++ b/java/spring-boot-apps/07-tracing-observability/hello-world-modular/hello-world-services/greeting-service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 ORGANISATION=zonesoft
 APPLICATION_NAME=greeting-service
 SERVER_PORT=8284
-LOKI_ENABLED=true
-LOKI_URL=http://localhost:3100/loki/api/v1/push
-TEMPO_URL=${ENV_GREETING_SERVICE_TEMPO_URL:http://localhost:9411/api/v2/spans}
+#LOKI_ENABLED=true
+#LOKI_URL=http://localhost:3100/loki/api/v1/push
+#TEMPO_URL=${ENV_GREETING_SERVICE_TEMPO_URL:http://localhost:9411/api/v2/spans}
 
 CALENDAR_SERVICE_PROTOCOL=http
 CALENDAR_SERVICE_DOMAIN=localhost
@@ -23,11 +23,11 @@ spring.application.org=${ENV_GREETING_SERVICE_ORGANISATION:${ORGANISATION}}
 spring.application.name=${ENV_GREETING_SERVICE_NAME:${APPLICATION_NAME}}
 server.port=${ENV_GREETING_SERVER_PORT:${SERVER_PORT}}
 
-zonesoft.loki.enabled=${ENV_GREETING_SERVICE_LOKI_ENABLED:${LOKI_ENABLED}}
-zonesoft.loki.url=${ENV_GREETING_SERVICE_LOKI_URL:${LOKI_URL}}
+#zonesoft.loki.enabled=${ENV_GREETING_SERVICE_LOKI_ENABLED:${LOKI_ENABLED}}
+#zonesoft.loki.url=${ENV_GREETING_SERVICE_LOKI_URL:${LOKI_URL}}
 
-management.metrics.distribution.percentiles-histogram.http.server.requests=true
-management.endpoints.web.exposure.include=info,health,metrics,prometheus
+#management.metrics.distribution.percentiles-histogram.http.server.requests=true
+#management.endpoints.web.exposure.include=info,health,metrics,prometheus
 
-management.zipkin.tracing.endpoint=${TEMPO_URL}
-management.tracing.sampling.probability=1.0
+#management.zipkin.tracing.endpoint=${TEMPO_URL}
+#management.tracing.sampling.probability=1.0
