--- a/java/spring-boot-apps/07-tracing-observability/hello-world-modular/hello-world-services/calendar-service/src/main/resources/application.properties
+++ b/java/spring-boot-apps/07-tracing-observability/hello-world-modular/hello-world-services/calendar-service/src/main/resources/application.properties
@@ -2,18 +2,18 @@ ORGANISATION=zonesoft
 APPLICATION_NAME=calendar-service
 SERVER_PORT=8286
 
-LOKI_ENABLED=true
-LOKI_URL=http://localhost:3100/loki/api/v1/push
-TEMPO_URL=${ENV_CALENDAR_SERVICE_TEMPO_URL:http://localhost:9411/api/v2/spans}
+#LOKI_ENABLED=true
+#LOKI_URL=http://localhost:3100/loki/api/v1/push
+#TEMPO_URL=${ENV_CALENDAR_SERVICE_TEMPO_URL:http://localhost:9411/api/v2/spans}
 
 spring.application.org=${ENV_CALENDAR_SERVICE_ORGANISATION:${ORGANISATION}}
 spring.application.name=${ENV_CALENDAR_SERVICE_NAME:${APPLICATION_NAME}}
 server.port=${ENV_CALENDAR_SERVER_PORT:${SERVER_PORT}}
 
-zonesoft.loki.enabled=${ENV_CALENDAR_SERVICE_LOKI_ENABLED:${LOKI_ENABLED}}
-zonesoft.loki.url=${ENV_CALENDAR_SERVICE_LOKI_URL:${LOKI_URL}}
-management.metrics.distribution.percentiles-histogram.http.server.requests=true
-management.endpoints.web.exposure.include=info,health,metrics,prometheus
+#zonesoft.loki.enabled=${ENV_CALENDAR_SERVICE_LOKI_ENABLED:${LOKI_ENABLED}}
+#zonesoft.loki.url=${ENV_CALENDAR_SERVICE_LOKI_URL:${LOKI_URL}}
+#management.metrics.distribution.percentiles-histogram.http.server.requests=true
+#management.endpoints.web.exposure.include=info,health,metrics,prometheus
 
-management.zipkin.tracing.endpoint=${TEMPO_URL}
-management.tracing.sampling.probability=1.0
+#management.zipkin.tracing.endpoint=${TEMPO_URL}
+#management.tracing.sampling.probability=1.0
