--- a/java/spring-boot-apps/07-tracing-observability/hello-world-modular/hello-world-ui/pom.xml
+++ b/java/spring-boot-apps/07-tracing-observability/hello-world-modular/hello-world-ui/pom.xml
@@ -14,15 +14,15 @@
 			<artifactId>hello-world-utils</artifactId>
 			<version>0.0.1-SNAPSHOT</version>			
 		</dependency>
-		<dependency>
-			<groupId>io.micrometer</groupId>
-			<artifactId>micrometer-tracing-bridge-otel</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>io.micrometer</groupId>-->
+<!--			<artifactId>micrometer-tracing-bridge-otel</artifactId>-->
+<!--		</dependency>-->
 		
-		<dependency>
-		    <groupId>io.opentelemetry</groupId>
-		    <artifactId>opentelemetry-exporter-zipkin</artifactId>
-		</dependency>				
+<!--		<dependency>-->
+<!--		    <groupId>io.opentelemetry</groupId>-->
+<!--		    <artifactId>opentelemetry-exporter-zipkin</artifactId>-->
+<!--		</dependency>				-->
 	</dependencies>
 	<build>
 		<plugins>
