--- a/java/spring-boot-apps/07-tracing-observability/hello-world-modular/hello-world-ui/src/main/resources/application.properties
+++ b/java/spring-boot-apps/07-tracing-observability/hello-world-modular/hello-world-ui/src/main/resources/application.properties
@@ -9,18 +9,18 @@ GREETING_SERVICE_PATH=/greeting
 GREETING_SERVICE_CLIENT_NAME=${APPLICATION_NAME}
 GREETING_SERVICE_TYPE=internal
 
-LOKI_ENABLED=true
-LOKI_URL=http://localhost:3100/loki/api/v1/push
-TEMPO_URL=${ENV_UI_APPLICATION_TEMPO_URL:http://localhost:9411/api/v2/spans}
+#LOKI_ENABLED=true
+#LOKI_URL=http://localhost:3100/loki/api/v1/push
+#TEMPO_URL=${ENV_UI_APPLICATION_TEMPO_URL:http://localhost:9411/api/v2/spans}
 
 spring.application.org=${ENV_UI_APPLICATION_ORGANISATION:${ORGANISATION}}
 spring.application.name=${ENV_UI_APPLICATION_NAME:${APPLICATION_NAME}}
 server.port=${ENV_UI_SERVER_PORT:${SERVER_PORT}}
 
-zonesoft.loki.enabled=${ENV_UI_APPLICATION_LOKI_ENABLED:${LOKI_ENABLED}}
-zonesoft.loki.url=${ENV_UI_APPLICATION_LOKI_URL:${LOKI_URL}}
-management.metrics.distribution.percentiles-histogram.http.server.requests=true
-management.endpoints.web.exposure.include=info,health,metrics,prometheus
+#zonesoft.loki.enabled=${ENV_UI_APPLICATION_LOKI_ENABLED:${LOKI_ENABLED}}
+#zonesoft.loki.url=${ENV_UI_APPLICATION_LOKI_URL:${LOKI_URL}}
+#management.metrics.distribution.percentiles-histogram.http.server.requests=true
+#management.endpoints.web.exposure.include=info,health,metrics,prometheus
 
-management.zipkin.tracing.endpoint=${TEMPO_URL}
-management.tracing.sampling.probability=1.0
+#management.zipkin.tracing.endpoint=${TEMPO_URL}
+#management.tracing.sampling.probability=1.0
