--- a/java/spring-boot-apps/07-tracing-observability/hello-world-modular/hello-world-utils/src/main/resources/application.properties
+++ b/java/spring-boot-apps/07-tracing-observability/hello-world-modular/hello-world-utils/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 ORGANISATION=zonesoft
 LIBRARY=hello-world-utils
 
-LOKI_ENABLED=true
-LOKI_URL=http://localhost:3100/loki/api/v1/push
-TEMPO_URL=${ENV_UTILS_TEMPO_URL:http://localhost:9411/api/v2/spans}
+#LOKI_ENABLED=true
+#LOKI_URL=http://localhost:3100/loki/api/v1/push
+#TEMPO_URL=${ENV_UTILS_TEMPO_URL:http://localhost:9411/api/v2/spans}
 
 HTTP_CLIENT_LOGGING_LEVEL=DEBUG
 
@@ -12,8 +12,8 @@ spring.application.name=${ENV_UTILS_LIBRARY:${LIBRARY}}
 
 logging.level.reactor.netty.http.client=${ENV_HTTP_CLIENT_LOGGING_LEVEL:${HTTP_CLIENT_LOGGING_LEVEL}}
 
-zonesoft.loki.enabled=${ENV_UTILS_LOKI_ENABLED:${LOKI_ENABLED}}
-zonesoft.loki.url=${ENV_UTILS_LOKI_URL:${LOKI_URL}
+#zonesoft.loki.enabled=${ENV_UTILS_LOKI_ENABLED:${LOKI_ENABLED}}
+#zonesoft.loki.url=${ENV_UTILS_LOKI_URL:${LOKI_URL}
 
-management.zipkin.tracing.endpoint=${TEMPO_URL}
-management.tracing.sampling.probability=1.0
+#management.zipkin.tracing.endpoint=${TEMPO_URL}
+#management.tracing.sampling.probability=1.0
