--- a/java/spring-boot-apps/07-tracing-observability/hello-world-modular/pom.xml
+++ b/java/spring-boot-apps/07-tracing-observability/hello-world-modular/pom.xml
@@ -22,7 +22,7 @@
 	<properties>
 		<java.version>21</java.version>
 		<frontend-maven-plugin.version>1.14.0</frontend-maven-plugin.version>
-        <loki-logback-appender.version>1.5.1</loki-logback-appender.version>		
+<!--        <loki-logback-appender.version>1.5.1</loki-logback-appender.version>		-->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -40,39 +40,39 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<groupId>com.github.loki4j</groupId>
-			<artifactId>loki-logback-appender</artifactId>
-			<scope>runtime</scope>
-			<version>${loki-logback-appender.version}</version>
-		</dependency>		
-		<dependency>
-		    <groupId>org.codehaus.janino</groupId>
-		    <artifactId>janino</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.github.loki4j</groupId>-->
+<!--			<artifactId>loki-logback-appender</artifactId>-->
+<!--			<scope>runtime</scope>-->
+<!--			<version>${loki-logback-appender.version}</version>-->
+<!--		</dependency>		-->
+<!--		<dependency>-->
+<!--		    <groupId>org.codehaus.janino</groupId>-->
+<!--		    <artifactId>janino</artifactId>-->
+<!--		</dependency>-->
 		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>	
-		<dependency>
-			<groupId>io.micrometer</groupId>
-			<artifactId>micrometer-registry-prometheus</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>io.projectreactor</groupId>
-			<artifactId>reactor-core-micrometer</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-actuator</artifactId>-->
+<!--		</dependency>	-->
+<!--		<dependency>-->
+<!--			<groupId>io.micrometer</groupId>-->
+<!--			<artifactId>micrometer-registry-prometheus</artifactId>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>io.projectreactor</groupId>-->
+<!--			<artifactId>reactor-core-micrometer</artifactId>-->
+<!--		</dependency>-->
 		
-		<dependency>
-			<groupId>io.micrometer</groupId>
-			<artifactId>micrometer-tracing-bridge-otel</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>io.micrometer</groupId>-->
+<!--			<artifactId>micrometer-tracing-bridge-otel</artifactId>-->
+<!--		</dependency>-->
 		
-		<dependency>
-		    <groupId>io.opentelemetry</groupId>
-		    <artifactId>opentelemetry-exporter-zipkin</artifactId>
-		</dependency>			
+<!--		<dependency>-->
+<!--		    <groupId>io.opentelemetry</groupId>-->
+<!--		    <artifactId>opentelemetry-exporter-zipkin</artifactId>-->
+<!--		</dependency>			-->
 				
 	</dependencies>
 
