--- a/java/spring-boot-apps/02-multi-module/hello-world-modular/pom.xml
+++ b/java/spring-boot-apps/02-multi-module/hello-world-modular/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.2.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
   <groupId>com.zonesoft</groupId>
   <artifactId>hello-world-modular</artifactId>
@@ -22,7 +22,6 @@
 	<properties>
 		<java.version>21</java.version>
 		<frontend-maven-plugin.version>1.14.0</frontend-maven-plugin.version>
-        <loki-logback-appender.version>1.5.1</loki-logback-appender.version>		
 	</properties>
 	<dependencies>
 		<dependency>
@@ -39,7 +38,8 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
-		</dependency>		
+		</dependency>
+				
 	</dependencies>
 
 </project>
