--- a/java/spring-boot-apps/07-tracing-observability/hello-world-modular/pom.xml
+++ b/java/spring-boot-apps/07-tracing-observability/hello-world-modular/pom.xml
@@ -22,7 +22,29 @@
 	<properties>
 		<java.version>21</java.version>
 		<frontend-maven-plugin.version>1.14.0</frontend-maven-plugin.version>
+		<opentelemetry-bom.version>1.38.0</opentelemetry-bom.version>
+		<opentelemetry-instrumentation-bom.version>2.4.0-alpha</opentelemetry-instrumentation-bom.version>
 	</properties>
+	
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>io.opentelemetry</groupId>
+				<artifactId>opentelemetry-bom</artifactId>
+				<version>${opentelemetry-bom.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>io.opentelemetry.instrumentation</groupId>
+				<artifactId>opentelemetry-instrumentation-bom-alpha</artifactId>
+				<version>${opentelemetry-instrumentation-bom.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -39,7 +61,10 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-				
+		<dependency>
+			<groupId>io.opentelemetry.instrumentation</groupId>
+			<artifactId>opentelemetry-spring-boot-starter</artifactId>
+		</dependency>				
 	</dependencies>
 
 </project>
