not sure now what these changes are but best to preserve them

--- a/java/spring-boot-apps/07-tracing-observability/hello-world-modular/hello-world-services/calendar-service/src/main/resources/application.properties
+++ b/java/spring-boot-apps/07-tracing-observability/hello-world-modular/hello-world-services/calendar-service/src/main/resources/application.properties
@@ -1,12 +1,14 @@
+DEPLOYMENT=local-dev
 ORGANISATION=zonesoft
+NAMESPACE=reference-apps
 APPLICATION_NAME=calendar-service
 SERVER_PORT=8286
 
-#LOKI_ENABLED=true
+OTEL_LOGS_ENABLED=false
 #LOKI_URL=http://localhost:3100/loki/api/v1/push
 #TEMPO_URL=${ENV_CALENDAR_SERVICE_TEMPO_URL:http://localhost:9411/api/v2/spans}
 
-spring.application.org=${ENV_CALENDAR_SERVICE_ORGANISATION:${ORGANISATION}}
+#spring.application.org=${ENV_CALENDAR_SERVICE_ORGANISATION:${ORGANISATION}}
 spring.application.name=${ENV_CALENDAR_SERVICE_NAME:${APPLICATION_NAME}}
 server.port=${ENV_CALENDAR_SERVER_PORT:${SERVER_PORT}}
 
@@ -17,3 +19,10 @@ server.port=${ENV_CALENDAR_SERVER_PORT:${SERVER_PORT}}
 
 #management.zipkin.tracing.endpoint=${TEMPO_URL}
 #management.tracing.sampling.probability=1.0
+
+otel.propagators=tracecontext
+otel.resource.attributes.deployment.environment=${ENV_CALENDAR_SERVICE_DEPLOYMENT:${DEPLOYMENT}}
+otel.resource.attributes.service.org=${ENV_CALENDAR_SERVICE_ORGANISATION:${ORGANISATION}}
+otel.resource.attributes.service.namespace=${ENV_CALENDAR_SERVICE_NAMESPACE:${NAMESPACE}}
+otel.resource.attributes.service.name=${spring.application.name}
+otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OTEL_LOGS_ENABLED}}
