--- a/java/spring-boot-apps/07-tracing-observability/hello-world-modular/hello-world-services/greeting-service/src/main/resources/application.properties
+++ b/java/spring-boot-apps/07-tracing-observability/hello-world-modular/hello-world-services/greeting-service/src/main/resources/application.properties
@@ -1,7 +1,10 @@
+DEPLOYMENT=local-dev
 ORGANISATION=zonesoft
+NAMESPACE=reference-apps
 APPLICATION_NAME=greeting-service
 SERVER_PORT=8284
-#LOKI_ENABLED=true
+
+OTEL_LOGS_ENABLED=false
 #LOKI_URL=http://localhost:3100/loki/api/v1/push
 #TEMPO_URL=${ENV_GREETING_SERVICE_TEMPO_URL:http://localhost:9411/api/v2/spans}
 
@@ -19,7 +22,7 @@ CLOCK_SERVICE_PATH=/get-time
 CLOCK_SERVICE_CLIENT_NAME=${APPLICATION_NAME}
 CLOCK_SERVICE_TYPE=internal
 
-spring.application.org=${ENV_GREETING_SERVICE_ORGANISATION:${ORGANISATION}}
+#spring.application.org=${ENV_GREETING_SERVICE_ORGANISATION:${ORGANISATION}}
 spring.application.name=${ENV_GREETING_SERVICE_NAME:${APPLICATION_NAME}}
 server.port=${ENV_GREETING_SERVER_PORT:${SERVER_PORT}}
 
@@ -31,3 +34,10 @@ server.port=${ENV_GREETING_SERVER_PORT:${SERVER_PORT}}
 
 #management.zipkin.tracing.endpoint=${TEMPO_URL}
 #management.tracing.sampling.probability=1.0
+
+otel.propagators=tracecontext
+otel.resource.attributes.deployment.environment=${ENV_GREETING_SERVICE_DEPLOYMENT:${DEPLOYMENT}}
+otel.resource.attributes.service.org=${ENV_GREETING_SERVICE_ORGANISATION:${ORGANISATION}}
+otel.resource.attributes.service.namespace=${ENV_GREETING_SERVICE_NAMESPACE:${NAMESPACE}}
+otel.resource.attributes.service.name=${spring.application.name}
+otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OTEL_LOGS_ENABLED}}
