--- a/java/spring-boot-apps/07-tracing-observability/hello-world-modular/hello-world-ui/src/main/resources/application.properties
+++ b/java/spring-boot-apps/07-tracing-observability/hello-world-modular/hello-world-ui/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+DEPLOYMENT=local-dev
 ORGANISATION=zonesoft
+NAMESPACE=reference-apps
 APPLICATION_NAME=hello-world-ui
 SERVER_PORT=8283
 
@@ -9,11 +11,11 @@ GREETING_SERVICE_PATH=/greeting
 GREETING_SERVICE_CLIENT_NAME=${APPLICATION_NAME}
 GREETING_SERVICE_TYPE=internal
 
-#LOKI_ENABLED=true
+OTEL_LOGS_ENABLED=false
 #LOKI_URL=http://localhost:3100/loki/api/v1/push
 #TEMPO_URL=${ENV_UI_APPLICATION_TEMPO_URL:http://localhost:9411/api/v2/spans}
-
-spring.application.org=${ENV_UI_APPLICATION_ORGANISATION:${ORGANISATION}}
+#spring.application.namespace=${ENV_UI_APPLICATION_NAMESPACE:${NAMESPACE}}
+#spring.application.org=${ENV_UI_APPLICATION_ORGANISATION:${ORGANISATION}}
 spring.application.name=${ENV_UI_APPLICATION_NAME:${APPLICATION_NAME}}
 server.port=${ENV_UI_SERVER_PORT:${SERVER_PORT}}
 
@@ -24,3 +26,10 @@ server.port=${ENV_UI_SERVER_PORT:${SERVER_PORT}}
 
 #management.zipkin.tracing.endpoint=${TEMPO_URL}
 #management.tracing.sampling.probability=1.0
+
+otel.propagators=tracecontext
+otel.resource.attributes.deployment.environment=${ENV_UI_APPLICATION_DEPLOYMENT:${DEPLOYMENT}}
+otel.resource.attributes.service.org=${ENV_UI_APPLICATION_ORGANISATION:${ORGANISATION}}
+otel.resource.attributes.service.namespace=${ENV_UI_APPLICATION_NAMESPACE:${NAMESPACE}}
+otel.resource.attributes.service.name=${spring.application.name}
+otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OTEL_LOGS_ENABLED}}
