--- a/java/spring-boot-apps/07-tracing-observability/hello-world-modular/pom.xml
+++ b/java/spring-boot-apps/07-tracing-observability/hello-world-modular/pom.xml
@@ -64,7 +64,11 @@
 		<dependency>
 			<groupId>io.opentelemetry.instrumentation</groupId>
 			<artifactId>opentelemetry-spring-boot-starter</artifactId>
-		</dependency>				
+		</dependency>
+		<dependency>
+		    <groupId>org.codehaus.janino</groupId>
+		    <artifactId>janino</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
