--- a/java/spring-boot-apps/07-tracing-observability/hello-world-modular/hello-world-ui/pom.xml
+++ b/java/spring-boot-apps/07-tracing-observability/hello-world-modular/hello-world-ui/pom.xml
@@ -12,8 +12,12 @@
 		<dependency>
 			<groupId>com.zonesoft</groupId>
 			<artifactId>hello-world-utils</artifactId>
-			<version>0.0.1-SNAPSHOT</version>			
+			<version>0.0.1-SNAPSHOT</version>		
 		</dependency>
+		<dependency>
+			<groupId>io.opentelemetry.instrumentation</groupId>
+			<artifactId>opentelemetry-spring-boot-starter</artifactId>
+		</dependency>		
 	</dependencies>
 	<build>
 		<plugins>
