--- a/otel-standalone-examples/05-otel-prometheus-tempo-loki/docker/core/docker-compose.yml
+++ b/otel-standalone-examples/05-otel-prometheus-tempo-loki/docker/core/docker-compose.yml
@@ -52,6 +52,8 @@ services:
     image: prom/prometheus:v2.33.3
     container_name: prometheus
     hostname: prometheus
+    extra_hosts:
+      - host.docker.internal:host-gateway
     restart: always
     volumes:
       - ./prometheus/config.yml:/etc/prometheus/prometheus.yml
@@ -73,6 +75,21 @@ services:
       - "4418:4418" # OTLP http receiver
     networks:
       - products
+
+  grafana:
+    image: grafana/grafana:10.2.2
+    container_name: grafana    
+    restart: always
+    volumes:
+      - ./grafana/datasources.yml:/etc/grafana/provisioning/datasources/datasources.yaml
+    environment:
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_DISABLE_LOGIN_FORM=true
+      - GF_FEATURE_TOGGLES_ENABLE=traceqlEditor traceQLStreaming metricsSummary
+    ports:
+      - "3000:3000"
+
 
 networks:
   products:
