--- a/otel-standalone-examples/05-otel-prometheus-tempo-loki/docker/core/otel-collector/config.yml
+++ b/otel-standalone-examples/05-otel-prometheus-tempo-loki/docker/core/otel-collector/config.yml
@@ -13,9 +13,12 @@ receivers:
 # See for more details following documentation: https://opentelemetry.io/docs/collector/configuration/#exporters
 exporters:
   # Data sources: traces
-  otlphttp:
+  otlphttp/jaeger:
     endpoint: http://jaeger:4318
 
+  otlphttp/tempo:
+    endpoint: http://tempo:4318
+    
   # Data sources: metrics
   prometheus:
 #    endpoint: 9094
@@ -28,7 +31,7 @@ service:
   pipelines:
     traces:
       receivers: [otlp]
-      exporters: [otlphttp]
+      exporters: [otlphttp/jaeger, otlphttp/tempo]
     metrics:
       receivers: [otlp]
       exporters: [prometheus]
