--- a/otel-standalone-examples/05-otel-prometheus-tempo-loki/docker/core/grafana/datasources.yml
+++ b/otel-standalone-examples/05-otel-prometheus-tempo-loki/docker/core/grafana/datasources.yml
@@ -16,21 +16,21 @@ datasources:
 #    version: 1
 #    editable: false
 
-#  - name: Tempo
-#    type: tempo
-#    access: proxy
-#    orgId: 1
-#    url: http://tempo:3200
-#    basicAuth: false
-#    isDefault: true
-#    version: 1
-#    editable: false
-#    apiVersion: 1
-#    uid: tempo
-#    jsonData:
-#      httpMethod: GET
-#      serviceMap:
-#        datasourceUid: prometheus
+- name: Tempo
+  type: tempo
+  access: proxy
+  orgId: 1
+  url: http://host.docker.internal:3200
+  basicAuth: false
+  isDefault: false
+  version: 1
+  editable: false
+  apiVersion: 1
+  uid: tempo
+  jsonData:
+    httpMethod: GET
+    serviceMap:
+      datasourceUid: prometheus
 
 - name: Prometheus
   type: prometheus
