--- a/otel-standalone-examples/05-otel-prometheus-tempo-loki/product-service/src/main/resources/application.properties
+++ b/otel-standalone-examples/05-otel-prometheus-tempo-loki/product-service/src/main/resources/application.properties
@@ -9,12 +9,9 @@ spring.flyway.out-of-order=true
 
 spring.elasticsearch.rest.uri=localhost:9200
 
-otel.instrumentation.logback-appender.enabled=false
+otel.instrumentation.logback-appender.enabled=true
 otel.service.name=products_service
 otel.metrics.exporter=otlp
 otel.traces.exporter=otlp
+otel.logs.exporter=otlp
 otel.exporter.otlp.endpoint=http://host.docker.internal:4418
-#OTEL_SERVICE_NAME=products_service
-#OTEL_METRICS_EXPORTER=otlp
-#OTEL_TRACES_EXPORTER=otlp
-#OTEL_EXPORTER_OTLP_ENDPOINT=http://host.docker.internal:4418
