--- a/hello-world-apps-and-services/07-otel-based-observability/docker/monitoring/otel-collector/config.yml
+++ b/hello-world-apps-and-services/07-otel-based-observability/docker/monitoring/otel-collector/config.yml
@@ -24,7 +24,7 @@ exporters:
   prometheus:
 #    endpoint: 9094
     endpoint: 0.0.0.0:9094
-    namespace: products_service
+    namespace: hello_world_apps
     
   # Data sources: logging
   logging:
