--- a/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-ui/src/main/resources/application.properties
+++ b/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-ui/src/main/resources/application.properties
@@ -27,9 +27,16 @@ server.port=${ENV_UI_SERVER_PORT:${SERVER_PORT}}
 #management.zipkin.tracing.endpoint=${TEMPO_URL}
 #management.tracing.sampling.probability=1.0
 
-otel.propagators=tracecontext
-otel.resource.attributes.deployment.environment=${ENV_UI_APPLICATION_DEPLOYMENT:${DEPLOYMENT}}
-otel.resource.attributes.service.org=${ENV_UI_APPLICATION_ORGANISATION:${ORGANISATION}}
-otel.resource.attributes.service.namespace=${ENV_UI_APPLICATION_NAMESPACE:${NAMESPACE}}
-otel.resource.attributes.service.name=${spring.application.name}
+#otel.propagators=tracecontext
+#otel.resource.attributes.deployment.environment=${ENV_UI_APPLICATION_DEPLOYMENT:${DEPLOYMENT}}
+#otel.resource.attributes.service.org=${ENV_UI_APPLICATION_ORGANISATION:${ORGANISATION}}
+#otel.resource.attributes.service.namespace=${ENV_UI_APPLICATION_NAMESPACE:${NAMESPACE}}
+#otel.resource.attributes.service.name=${spring.application.name}
+#otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OTEL_LOGS_ENABLED}}
+
 otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OTEL_LOGS_ENABLED}}
+otel.service.name=${spring.application.name}
+otel.metrics.exporter=otlp
+otel.traces.exporter=otlp
+otel.logs.exporter=otlp
+otel.exporter.otlp.endpoint=http://host.docker.internal:4418
