otel collector based integrations completed

--- a/hello-world-apps-and-services/07-otel-based-observability/docker/monitoring/otel-collector/config.yml
+++ b/hello-world-apps-and-services/07-otel-based-observability/docker/monitoring/otel-collector/config.yml
@@ -26,12 +26,12 @@ exporters:
     endpoint: 0.0.0.0:9094
     namespace: hello_world_apps
     
-  # Data sources: logging
-  logging:
-    loglevel: debug
+#  # Data sources: logging
+#  logging:
+#    loglevel: debug
   
   loki:
-    endpoint: "http://loki:3100/loki/api/v1/push"
+    endpoint: http://loki:3100/loki/api/v1/push
 
 # Services configuration section
 # See for more details following documentation: https://opentelemetry.io/docs/collector/configuration/#services
@@ -45,4 +45,5 @@ service:
       exporters: [prometheus]
     logs:
       receivers: [otlp]
-      exporters: [loki,logging]
+#      exporters: [loki,logging]
+      exporters: [loki]      
