--- a/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-services/greeting-service/pom.xml
+++ b/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-services/greeting-service/pom.xml
@@ -9,6 +9,12 @@
 	<artifactId>greeting-service</artifactId>
 	<name>greeting-service</name>
 	<description>A very basic greeting web service</description>
+	<!-- <dependencies> -->
+		<!-- <dependency> -->
+			<!-- <groupId>io.opentelemetry.instrumentation</groupId> -->
+			<!-- <artifactId>opentelemetry-spring-boot-starter</artifactId> -->
+		<!-- </dependency>		 -->
+	<!-- </dependencies> 	 -->
 	<build>
 		<plugins>
 			<plugin>
