--- a/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-services/calendar-service/src/main/resources/application.properties
+++ b/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-services/calendar-service/src/main/resources/application.properties
@@ -4,7 +4,7 @@ NAMESPACE=reference-apps
 APPLICATION_NAME=calendar-service
 SERVER_PORT=8286
 
-OTEL_LOGS_ENABLED=false
+OTEL_LOGS_ENABLED=true
 #LOKI_URL=http://localhost:3100/loki/api/v1/push
 #TEMPO_URL=${ENV_CALENDAR_SERVICE_TEMPO_URL:http://localhost:9411/api/v2/spans}
 
@@ -20,7 +20,7 @@ server.port=${ENV_CALENDAR_SERVER_PORT:${SERVER_PORT}}
 #management.zipkin.tracing.endpoint=${TEMPO_URL}
 #management.tracing.sampling.probability=1.0
 
-#otel.propagators=tracecontext
+otel.propagators=tracecontext
 #otel.resource.attributes.deployment.environment=${ENV_CALENDAR_SERVICE_DEPLOYMENT:${DEPLOYMENT}}
 #otel.resource.attributes.service.org=${ENV_CALENDAR_SERVICE_ORGANISATION:${ORGANISATION}}
 #otel.resource.attributes.service.namespace=${ENV_CALENDAR_SERVICE_NAMESPACE:${NAMESPACE}}
@@ -28,6 +28,7 @@ server.port=${ENV_CALENDAR_SERVER_PORT:${SERVER_PORT}}
 #otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OTEL_LOGS_ENABLED}}
 
 otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OTEL_LOGS_ENABLED}}
+#otel.instrumentation.logback-appender.enabled=true
 otel.service.name=${spring.application.name}
 otel.metrics.exporter=otlp
 otel.traces.exporter=otlp
