--- a/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-services/greeting-service/src/main/resources/application.properties
+++ b/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-services/greeting-service/src/main/resources/application.properties
@@ -4,7 +4,7 @@ NAMESPACE=reference-apps
 APPLICATION_NAME=greeting-service
 SERVER_PORT=8284
 
-OTEL_LOGS_ENABLED=false
+OTEL_LOGS_ENABLED=true
 #LOKI_URL=http://localhost:3100/loki/api/v1/push
 #TEMPO_URL=${ENV_GREETING_SERVICE_TEMPO_URL:http://localhost:9411/api/v2/spans}
 
@@ -35,14 +35,16 @@ server.port=${ENV_GREETING_SERVER_PORT:${SERVER_PORT}}
 #management.zipkin.tracing.endpoint=${TEMPO_URL}
 #management.tracing.sampling.probability=1.0
 
-#otel.propagators=tracecontext
+otel.propagators=tracecontext
 #otel.resource.attributes.deployment.environment=${ENV_GREETING_SERVICE_DEPLOYMENT:${DEPLOYMENT}}
 #otel.resource.attributes.service.org=${ENV_GREETING_SERVICE_ORGANISATION:${ORGANISATION}}
 #otel.resource.attributes.service.namespace=${ENV_GREETING_SERVICE_NAMESPACE:${NAMESPACE}}
 #otel.resource.attributes.service.name=${spring.application.name}
 #otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OTEL_LOGS_ENABLED}}
 
+
 otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OTEL_LOGS_ENABLED}}
+#otel.instrumentation.logback-appender.enabled=true
 otel.service.name=${spring.application.name}
 otel.metrics.exporter=otlp
 otel.traces.exporter=otlp
