--- a/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-ui/pom.xml
+++ b/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-ui/pom.xml
@@ -13,7 +13,11 @@
 			<groupId>com.zonesoft</groupId>
 			<artifactId>hello-world-utils</artifactId>
 			<version>0.0.1-SNAPSHOT</version>		
-		</dependency>		
+		</dependency>
+		<!-- <dependency> -->
+			<!-- <groupId>io.opentelemetry.instrumentation</groupId> -->
+			<!-- <artifactId>opentelemetry-spring-boot-starter</artifactId> -->
+		<!-- </dependency>			 -->
 	</dependencies>
 	<build>
 		<plugins>
