--- a/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-ui/src/main/resources/application.properties
+++ b/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-ui/src/main/resources/application.properties
@@ -11,7 +11,7 @@ GREETING_SERVICE_PATH=/greeting
 GREETING_SERVICE_CLIENT_NAME=${APPLICATION_NAME}
 GREETING_SERVICE_TYPE=internal
 
-OTEL_LOGS_ENABLED=false
+OTEL_LOGS_ENABLED=true
 #LOKI_URL=http://localhost:3100/loki/api/v1/push
 #TEMPO_URL=${ENV_UI_APPLICATION_TEMPO_URL:http://localhost:9411/api/v2/spans}
 #spring.application.namespace=${ENV_UI_APPLICATION_NAMESPACE:${NAMESPACE}}
@@ -27,7 +27,7 @@ server.port=${ENV_UI_SERVER_PORT:${SERVER_PORT}}
 #management.zipkin.tracing.endpoint=${TEMPO_URL}
 #management.tracing.sampling.probability=1.0
 
-#otel.propagators=tracecontext
+otel.propagators=tracecontext
 #otel.resource.attributes.deployment.environment=${ENV_UI_APPLICATION_DEPLOYMENT:${DEPLOYMENT}}
 #otel.resource.attributes.service.org=${ENV_UI_APPLICATION_ORGANISATION:${ORGANISATION}}
 #otel.resource.attributes.service.namespace=${ENV_UI_APPLICATION_NAMESPACE:${NAMESPACE}}
@@ -35,6 +35,7 @@ server.port=${ENV_UI_SERVER_PORT:${SERVER_PORT}}
 #otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OTEL_LOGS_ENABLED}}
 
 otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OTEL_LOGS_ENABLED}}
+#otel.instrumentation.logback-appender.enabled=true
 otel.service.name=${spring.application.name}
 otel.metrics.exporter=otlp
 otel.traces.exporter=otlp
