--- a/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-utils/pom.xml
+++ b/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-utils/pom.xml
@@ -14,5 +14,9 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
+		<!-- <dependency> -->
+			<!-- <groupId>io.opentelemetry.instrumentation</groupId> -->
+			<!-- <artifactId>opentelemetry-spring-boot-starter</artifactId> -->
+		<!-- </dependency>		 -->
 	</dependencies> 
 </project>
