--- a/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-utils/src/main/resources/application.properties
+++ b/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-utils/src/main/resources/application.properties
@@ -16,10 +16,15 @@ spring.application.deployment=${ENV_UTILS_DEPLOYMENT:${DEPLOYMENT}}
 
 otel.sdk.disabled=true
 
-otel.service.name=${spring.application.name}
-otel.resource.attributes.org=${spring.application.org}
-otel.resource.attributes.namespace=${spring.application.namespace}
-otel.resource.attributes.deployment=${spring.application.deployment}
+#otel.service.name=${spring.application.name}
+#otel.resource.attributes.org=${spring.application.org}
+#otel.resource.attributes.namespace=${spring.application.namespace}
+#otel.resource.attributes.deployment=${spring.application.deployment}
+
+otel.service.name=${ENV_UTILS_APPLICATION_NAME:${APPLICATION_NAME}}
+otel.resource.attributes.org=${ENV_UTILS_ORGANISATION:${ORGANISATION}}
+otel.resource.attributes.namespace=${ENV_UTILS_NAMESPACE:${NAMESPACE}}
+otel.resource.attributes.deployment=${ENV_UTILS_DEPLOYMENT:${DEPLOYMENT}}
 
 otel.propagators=tracecontext,baggage
 otel.metrics.exporter=otlp
@@ -27,3 +32,4 @@ otel.traces.exporter=otlp
 otel.logs.exporter=otlp
 otel.exporter.otlp.endpoint=${ENV_UTILS_OTEL_EXPORTER_ENDPOINT:${UTILS_OTEL_EXPORTER_ENDPOINT}}
 otel.instrumentation.logback-appender.enabled=${ENV_UTILS_OTEL_LOGS_ENABLED:${UTILS_OTEL_LOGS_ENABLED}}
+#otel.instrumentation.reactor.experimental-span-attributes=true
