--- a/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-ui/src/main/resources/application.properties
+++ b/hello-world-apps-and-services/07-otel-based-observability/hello-world-modular/hello-world-ui/src/main/resources/application.properties
@@ -22,10 +22,15 @@ spring.application.namespace=${ENV_UI_NAMESPACE:${NAMESPACE}}
 spring.application.name=${ENV_UI_APPLICATION_NAME:${APPLICATION_NAME}}
 spring.application.deployment=${ENV_UI_DEPLOYMENT:${DEPLOYMENT}}
 
-otel.service.name=${spring.application.name}
-otel.resource.attributes.org=${spring.application.org}
-otel.resource.attributes.namespace=${spring.application.namespace}
-otel.resource.attributes.deployment=${spring.application.deployment}
+#otel.service.name=${spring.application.name}
+#otel.resource.attributes.org=${spring.application.org}
+#otel.resource.attributes.namespace=${spring.application.namespace}
+#otel.resource.attributes.deployment=${spring.application.deployment}
+
+otel.service.name=${ENV_UI_APPLICATION_NAME:${APPLICATION_NAME}}
+otel.resource.attributes.org=${ENV_UI_ORGANISATION:${ORGANISATION}}
+otel.resource.attributes.namespace=${ENV_UI_NAMESPACE:${NAMESPACE}}
+otel.resource.attributes.deployment=${ENV_UI_DEPLOYMENT:${DEPLOYMENT}}
 
 otel.propagators=tracecontext,baggage
 otel.metrics.exporter=otlp
@@ -33,3 +38,4 @@ otel.traces.exporter=otlp
 otel.logs.exporter=otlp
 otel.exporter.otlp.endpoint=${ENV_UI_OTEL_EXPORTER_ENDPOINT:${UI_OTEL_EXPORTER_ENDPOINT}}
 otel.instrumentation.logback-appender.enabled=${ENV_UI_OTEL_LOGS_ENABLED:${UI_OTEL_LOGS_ENABLED}}
+#otel.instrumentation.reactor.experimental-span-attributes=true
