refactored controller and manually instrumented internal service call

--- a/hello-world-apps-and-services/08-manual-tracing/hello-world-modular/pom.xml
+++ b/hello-world-apps-and-services/08-manual-tracing/hello-world-modular/pom.xml
@@ -68,7 +68,11 @@
 		<dependency>
 		    <groupId>org.codehaus.janino</groupId>
 		    <artifactId>janino</artifactId>
-		</dependency>
+		</dependency>				
+		<dependency>
+		    <groupId>io.opentelemetry</groupId>
+		    <artifactId>opentelemetry-api-incubator</artifactId>
+		</dependency>		
 	</dependencies>
 
 </project>
