--- a/hello-world-apps-and-services/09-persist-telemetry-data/docker/monitoring/otel-collector/config.yml
+++ b/hello-world-apps-and-services/09-persist-telemetry-data/docker/monitoring/otel-collector/config.yml
@@ -14,8 +14,6 @@ receivers:
 # See for more details following documentation: https://opentelemetry.io/docs/collector/configuration/#exporters
 exporters:
   # Data sources: traces
-  otlphttp/jaeger:
-    endpoint: http://jaeger:4318
 
   otlphttp/tempo:
     endpoint: http://tempo:4318
@@ -26,10 +24,6 @@ exporters:
     endpoint: 0.0.0.0:9094
 #    namespace: hello_world_apps
     
-#  # Data sources: logging
-#  logging:
-#    loglevel: debug
-  
   loki:
     endpoint: http://loki:3100/loki/api/v1/push
 
@@ -39,11 +33,10 @@ service:
   pipelines:
     traces:
       receivers: [otlp]
-      exporters: [otlphttp/jaeger, otlphttp/tempo]
+      exporters: [otlphttp/tempo]
     metrics:
       receivers: [otlp]
       exporters: [prometheus]
     logs:
       receivers: [otlp]
-#      exporters: [loki,logging]
       exporters: [loki]      
