--- a/hello-world-apps-and-services/09-persist-telemetry-data/docker/monitoring/sample.env
+++ b/hello-world-apps-and-services/09-persist-telemetry-data/docker/monitoring/sample.env
@@ -1,7 +1,24 @@
 PROMETHEUS_CONFIG_FILE=./prometheus/config.yml
-PROMETHEUS_DATA_FOLDER=../../../../prometheus-data
+PROMETHEUS_DATA_FOLDER=../../../../../prometheus-data
 PROMETHEUS_PORT=9090
 PROMETHEUS_RESTART=always
+
+LOKI_CONFIG_FILE=./loki/config.yml
+LOKI_DATA_FOLDER=../../../../../loki-data
+LOKI_PORT=3100
+LOKI_RESTART=always
+
+TEMPO_CONFIG_FILE=./tempo/config.yml
+TEMPO_DATA_FOLDER=../../../../../tempo-data
+TEMPO_OTLP_GRPC_PORT=5317
+TEMPO_OTLP_HTTP_PORT=5318
+TEMPO_PORT=3100
+TEMPO_RESTART=always
+
+OTEL_CONFIG_FILE=./otel-collector/config.yml
+OTEL_PROMETHEUS_EXPORTER_PORT=9094
+OTEL_HTTP_RECEIVER_PORT=4418
+OTEL_RESTART=always
 
 NETWORK_NAME=hello_world_back_tier
 NETWORK_EXTERNAL=false
