--- a/hello-world-apps-and-services/09-persist-telemetry-data/docker/monitoring/docker-compose.yml
+++ b/hello-world-apps-and-services/09-persist-telemetry-data/docker/monitoring/docker-compose.yml
@@ -1,9 +1,7 @@
 # Orchestrates the start up of otel-collector based monitoring components as per the
 # architecture depicted in the notes.
 # validate this file by running `docker-compose config`
-
 services:
-
   prometheus:
     image: prom/prometheus:v2.45.5
     container_name: prometheus
@@ -23,6 +21,7 @@ services:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
       - '--enable-feature=exemplar-storage'
+      - '--web.enable-remote-write-receiver'
     ports:
       - mode: ingress
         target: 9090
@@ -43,20 +42,38 @@ services:
   # It uses a latest version of the Tempo image at the time of writing.
   #http://host.docker.internal:3200
   tempo:
-    image: grafana/tempo:2.3.1
+    image: grafana/tempo:2.4.1
     container_name: tempo
     hostname: tempo
-    extra_hosts: 
+    extra_hosts:
       - host.docker.internal:host-gateway    
     command:
-      - "-config.file=/etc/grafana-tempo.yaml"
-    restart: always
-    volumes:
-      - ./tempo/config.yml:/etc/grafana-tempo.yaml
+      - '-config.file=/etc/grafana-tempo.yaml'
+      - '--auth.enabled=false'
     ports:
-      - "5317:4317"  # otlp grpc
-      - "5318:4318"  # otlp http
-      - "3200:3200"  # tempo
+      - mode: ingress
+        target: 4317
+        published: ${TEMPO_OTLP_GRPC_PORT:-5317}
+        protocol: tcp        
+      - mode: ingress
+        target: 4318
+        published: ${TEMPO_OTLP_HTTP_PORT:-5318}
+        protocol: tcp        
+      - mode: ingress
+        target: 3200
+        published: ${TEMPO_PORT:-3200}
+        protocol: tcp              
+    volumes:
+      - type: bind
+        source: ${TEMPO_CONFIG_FILE:-./tempo/config.yml}
+        target: /etc/grafana-tempo.yaml
+        read_only: true
+      - type: bind
+        source: ${TEMPO_DATA_FOLDER:-../../../../../tempo-data}
+        target: /var/tempo
+        read_only: false
+    depends_on:
+      - loki
     networks:
       - hello_world_back_tier
 
@@ -66,20 +83,35 @@ services:
   # It uses the latest version of the Loki image at the time of writing.
   #http://host.docker.internal:3100
   loki:
-    image: grafana/loki:2.9.4
+    image: grafana/loki:3.0.0
     container_name: loki
     hostname: loki
     extra_hosts: 
-      - host.docker.internal:host-gateway      
-    command: ["-config.file=/etc/loki/grafana-loki.yaml"]
-    restart: always
+      - host.docker.internal:host-gateway    
     volumes:
-      - ./loki/config.yml:/etc/loki/grafana-loki.yaml
+      - type: bind
+        source: ${LOKI_CONFIG_FILE:-./loki/config.yml}
+        target: /configs/loki.yml
+        read_only: true
+      - type: bind
+        source: ${LOKI_DATA_FOLDER:-../../../../../loki-data}
+        target: /loki
+        read_only: false
+      - type: bind
+        source: ${LOKI_DATA_FOLDER:-../../../../../loki-data}/chunks
+        target: /loki/chunks
+        read_only: false        
+    command:
+      - '--config.file=/configs/loki.yml'          
     ports:
-      - "3100:3100" # Loki port
+      - mode: ingress
+        target: 3100
+        published: ${LOKI_PORT:-3100}
+        protocol: tcp      
     networks:
       - hello_world_back_tier
-                  
+    restart: ${LOKI_RESTART:-always}
+
   otel-collector:
     image: otel/opentelemetry-collector-contrib:0.93.0
     container_name: otel-collector
@@ -87,16 +119,17 @@ services:
     extra_hosts: 
       - host.docker.internal:host-gateway
     volumes:
-      - ./otel-collector/config.yml:/etc/otelcol-contrib/config.yaml
+      - ${OTEL_CONFIG_FILE:-./otel-collector/config.yml:/etc/otelcol-contrib/config.yaml}
     ports:
-      - "9094:9094" # Prometheus http exporter
-      - "4418:4418" # OTLP http receiver
+      - ${OTEL_PROMETHEUS_EXPORTER_PORT:-9094}:9094 # Prometheus http exporter
+      - ${OTEL_HTTP_RECEIVER_PORT:-4418}:4418 # OTLP http receiver
     networks:
       - hello_world_back_tier
     depends_on:
       - loki
       - tempo
-
+    restart: ${OTEL_RESTART:-always}
+    
   grafana:
     image: grafana/grafana:10.2.2
     container_name: grafana    
