enhanced with dashboard to see tomcat metrics

--- a/hello-world-apps-and-services/10-enhanced-manual-tracing/hello-world-modular/pom.xml
+++ b/hello-world-apps-and-services/10-enhanced-manual-tracing/hello-world-modular/pom.xml
@@ -72,7 +72,11 @@
 		<dependency>
 		    <groupId>io.opentelemetry</groupId>
 		    <artifactId>opentelemetry-api-incubator</artifactId>
-		</dependency>		
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>	
 	</dependencies>
 
 </project>
