--- a/hello-world-apps-and-services/10-enhanced-manual-tracing/hello-world-modular/hello-world-services/greeting-service/src/main/resources/application.properties
+++ b/hello-world-apps-and-services/10-enhanced-manual-tracing/hello-world-modular/hello-world-services/greeting-service/src/main/resources/application.properties
@@ -29,10 +29,6 @@ spring.application.namespace=${ENV_GREETING_NAMESPACE:${NAMESPACE}}
 spring.application.name=${ENV_GREETING_APPLICATION_NAME:${APPLICATION_NAME}}
 spring.application.deployment=${ENV_GREETING_DEPLOYMENT:${DEPLOYMENT}}
 
-#otel.service.name=${spring.application.name}
-#otel.resource.attributes.org=${spring.application.org}
-#otel.resource.attributes.namespace=${spring.application.namespace}
-#otel.resource.attributes.deployment=${spring.application.deployment}
 otel.service.name=${ENV_GREETING_APPLICATION_NAME:${APPLICATION_NAME}}
 otel.resource.attributes.org=${ENV_GREETING_ORGANISATION:${ORGANISATION}}
 otel.resource.attributes.namespace=${ENV_GREETING_NAMESPACE:${NAMESPACE}}
@@ -44,4 +40,5 @@ otel.traces.exporter=otlp
 otel.logs.exporter=otlp
 otel.exporter.otlp.endpoint=${ENV_GREETING_OTEL_EXPORTER_ENDPOINT:${GREETING_OTEL_EXPORTER_ENDPOINT}}
 otel.instrumentation.logback-appender.enabled=${ENV_GREETING_OTEL_LOGS_ENABLED:${GREETING_OTEL_LOGS_ENABLED}}
-#otel.instrumentation.reactor.experimental-span-attributes=true
+otel.instrumentation.micrometer.enabled=true
+server.tomcat.mbeanregistry.enabled=true
