--- a/05-spring-boot-security/[a]-unsecured-apps/hello-world-modular/hello-world-services/greeting-service/src/main/resources/application.properties
+++ b/05-spring-boot-security/[a]-unsecured-apps/hello-world-modular/hello-world-services/greeting-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.config.import=env.properties
+
 SERVER_PORT=8284
 
 ORGANISATION=zonesoft
@@ -5,8 +7,11 @@ NAMESPACE=hello-world-apps-and-services
 APPLICATION_NAME=greeting-service
 DEPLOYMENT=local-dev
 
-GREETING_OTEL_LOGS_ENABLED=true
-GREETING_OTEL_EXPORTER_ENDPOINT=http://host.docker.internal:4418
+OPEN_TELEMETRY_DISABLED=true
+OPEN_TELEMETRY_LOGS_ENABLED=false
+OPEN_TELEMETRY_INSTRUMENTATION_ENABLED=false
+OPEN_TELEMETRY_TOMCAT_ENABLED=false
+OPEN_TELEMETRY_EXPORTER_ENDPOINT=http://host.docker.internal:4418
 
 CALENDAR_SERVICE_PROTOCOL=http
 CALENDAR_SERVICE_DOMAIN=localhost
@@ -38,7 +43,8 @@ otel.propagators=tracecontext,baggage
 otel.metrics.exporter=otlp
 otel.traces.exporter=otlp
 otel.logs.exporter=otlp
-otel.exporter.otlp.endpoint=${ENV_GREETING_OTEL_EXPORTER_ENDPOINT:${GREETING_OTEL_EXPORTER_ENDPOINT}}
-otel.instrumentation.logback-appender.enabled=${ENV_GREETING_OTEL_LOGS_ENABLED:${GREETING_OTEL_LOGS_ENABLED}}
-otel.instrumentation.micrometer.enabled=true
-server.tomcat.mbeanregistry.enabled=true
+otel.sdk.disabled=${ENV_OTEL_DISABLED:${OPEN_TELEMETRY_DISABLED}}
+otel.exporter.otlp.endpoint=${ENV_OTEL_EXPORTER_ENDPOINT:${OPEN_TELEMETRY_EXPORTER_ENDPOINT}}
+otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OPEN_TELEMETRY_LOGS_ENABLED}}
+otel.instrumentation.micrometer.enabled=${ENV_OTEL_INSTRUMENTATION_ENABLED:${OPEN_TELEMETRY_INSTRUMENTATION_ENABLED}}
+server.tomcat.mbeanregistry.enabled=${OPEN_TELEMETRY_TOMCAT_ENABLED}
