--- a/05-spring-boot-security/[a]-unsecured-apps/hello-world-modular/hello-world-utils/src/main/resources/application.properties
+++ b/05-spring-boot-security/[a]-unsecured-apps/hello-world-modular/hello-world-utils/src/main/resources/application.properties
@@ -1,20 +1,22 @@
+spring.config.import=env.properties
+
 ORGANISATION=zonesoft
 NAMESPACE=hello-world-apps-and-services
 APPLICATION_NAME=hello-world-ui
 DEPLOYMENT=local-dev
 
-UTILS_OTEL_LOGS_ENABLED=false
-UTILS_OTEL_EXPORTER_ENDPOINT=http://host.docker.internal:4418
+OPEN_TELEMETRY_DISABLED=true
+OPEN_TELEMETRY_LOGS_ENABLED=false
+OPEN_TELEMETRY_INSTRUMENTATION_ENABLED=false
+OPEN_TELEMETRY_TOMCAT_ENABLED=false
+OPEN_TELEMETRY_EXPORTER_ENDPOINT=http://host.docker.internal:4418
 
 HTTP_CLIENT_LOGGING_LEVEL=DEBUG
-
 
 spring.application.org=${ENV_UTILS_ORGANISATION:${ORGANISATION}}
 spring.application.namespace=${ENV_UTILS_NAMESPACE:${NAMESPACE}}
 spring.application.name=${ENV_UTILS_APPLICATION_NAME:${APPLICATION_NAME}}
 spring.application.deployment=${ENV_UTILS_DEPLOYMENT:${DEPLOYMENT}}
-
-otel.sdk.disabled=true
 
 otel.service.name=${ENV_UTILS_APPLICATION_NAME:${APPLICATION_NAME}}
 otel.resource.attributes.org=${ENV_UTILS_ORGANISATION:${ORGANISATION}}
@@ -25,7 +27,8 @@ otel.propagators=tracecontext,baggage
 otel.metrics.exporter=otlp
 otel.traces.exporter=otlp
 otel.logs.exporter=otlp
-otel.exporter.otlp.endpoint=${ENV_UTILS_OTEL_EXPORTER_ENDPOINT:${UTILS_OTEL_EXPORTER_ENDPOINT}}
-otel.instrumentation.logback-appender.enabled=${ENV_UTILS_OTEL_LOGS_ENABLED:${UTILS_OTEL_LOGS_ENABLED}}
-otel.instrumentation.micrometer.enabled=true
-server.tomcat.mbeanregistry.enabled=true
+otel.sdk.disabled=${ENV_OTEL_DISABLED:${OPEN_TELEMETRY_DISABLED}}
+otel.exporter.otlp.endpoint=${ENV_OTEL_EXPORTER_ENDPOINT:${OPEN_TELEMETRY_EXPORTER_ENDPOINT}}
+otel.instrumentation.logback-appender.enabled=${ENV_OTEL_LOGS_ENABLED:${OPEN_TELEMETRY_LOGS_ENABLED}}
+otel.instrumentation.micrometer.enabled=${ENV_OTEL_INSTRUMENTATION_ENABLED:${OPEN_TELEMETRY_INSTRUMENTATION_ENABLED}}
+server.tomcat.mbeanregistry.enabled=${OPEN_TELEMETRY_TOMCAT_ENABLED}
